[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
"log" = "0.4"
"once_cell" = "1.19"
"rand" = "0.8"
"regex" = "1.10"
"env_logger" = "0.11"
"tokio-stream" = "0.1"
"chrono" = "0.4"