[package]
name = "rinux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.3"
spin = "0.9"
bootloader = "0.11.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target="x86_64-unknown-none"
